metodo, delete e create

--- a/src/components/layout/Layout.module.css
+++ b/src/components/layout/Layout.module.css
@@ -1,20 +1,14 @@
 
-
 /* Side Bar */
-.w_0{
-    position: fixed;
-    left: -100% !important;
+.closed{
+    margin-left: -16.5rem;
     transition: all .45s ease-in-out;
 }
 
-.w_100{
-    width: 18rem !important;
+.open{
+    width: 22rem;
     transition: all .45s ease-in-out;
 
 }
 
 /* Header */
-.header{
-    width: 67.5rem;
-    height: 4.4rem;
-}
